--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_active">
+          <li class="header__links-list-item header__links-list-item_active header__links-list-item_no-bullit">
             <a class="header__link">главная</a>
           </li>
           <li class="header__links-list-item">
@@ -38,7 +38,7 @@
           <a class="address__link" href="mailto:info@sobaka.ge">
             info@sobaka.ge
           </a>
-          <p class="address__link-location">
+          <p>
             наб. Принсенграхт 263-265,<br />
             Амстердам
           </p>
